--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "npm run build --workspaces",
     "clean": "npm run clean --workspaces",
     "clean:install": "npm run clean --workspaces && npm install",
-    "prerelease": "npm run version --preid=alpha",
+    "prerelease": "npm version prerelease --preid=alpha --workspaces",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
