--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "license": "ISC",
   "description": "",
   "workspaces": [
-    "packages/second",
-    "packages/first"
+    "packages/*"
   ],
   "devDependencies": {
     "@nx/js": "^19.8.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "nx": "19.8.2"
-  },
-  "dependencies": {}
+    "@types/node": "^22.7.4",
+    "nx": "19.8.2",
+    "ts-node": "^10.9.2"
+  }
 }
