chore(release): publish 1.0.1-alpha-37fefdf.0

--- a/packages/second/package.json
+++ b/packages/second/package.json
@@ -1,6 +1,6 @@
 {
   "name": "second",
-  "version": "1.0.1-2",
+  "version": "1.0.1-alpha-37fefdf.0",
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc",
